--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <script src="../config.js"></script>
+    <script src="./config.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
