--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         // Your web app's Firebase configuration
         // For Firebase JS SDK v7.20.0 and later, measurementId is optional
         var firebaseConfig = {
-            apiKey: process.env.api_key,
+            apiKey: api_key,
             authDomain: "eternal-sunset.firebaseapp.com",
             databaseURL: database_url,
             projectId: "eternal-sunset",
