--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 </head>
 
 <body>
+    <div id="sunset-cam"></div>
+
     <script src="../config.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -36,6 +38,59 @@
         let soonest_sunset_name = "";
         const sunsetTimes = [];
         const sunsetIndexs = [];
+
+        // 2. This code loads the IFrame Player API code asynchronously.
+        let tag = document.createElement('script');
+
+        tag.src = "https://www.youtube.com/iframe_api?autoplay=1";
+        tag.allow = "autoplay";
+        let firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+        let state = -1;
+        let player;
+        let startCamIndex;
+
+        onYouTubeIframeAPIReady = () => {
+            player = new YT.Player('sunset-cam', {
+                height: '390',
+                width: '640',
+                videoId: 'C1nn5sYyVkQ',
+                playerVars: {
+                    'playsinline': 1,
+                    'autoplay': 1,
+                    'mute': 1
+                },
+                events: {
+                    'onReady': onPlayerReady,
+                    'onStateChange': onPlayerStateChange
+                }
+            });
+        }
+
+
+        // 4. The API will call this function when the video player is ready.
+        onPlayerReady = (event) => {
+            event.target.playVideo();
+            setTimeout(() => { checkState(state) }, 5000);
+        };
+
+        checkState = (state) => {
+            console.log(state, 'state');
+            if (state == 1) {
+                console.log('video works');
+            }
+            else {
+                console.log('video not working, next');
+                startCamIndex += 1;
+                console.log(startCamIndex);
+                showCam(startCamIndex);
+            }
+        };
+
+        onPlayerStateChange = (event) => {
+            state = event.data;
+        };
+
         // make an ordered array of sunset times and the index number their webcam
         orderSunset = () => {
             let sunsetToday = firebase.database().ref(`sunsets/${currentDate}`);
@@ -55,7 +110,7 @@
         };
 
         showSunset = () => {
-            let startCamIndex = 0;
+            startCamIndex = 0;
             // find soonest sunset
             sunsetTimes.forEach((sunsetTime) => {
                 let timeDiff = dayjs(sunsetTime).diff(dayjs());
@@ -78,24 +133,24 @@
             // show cam
             firebase.database().ref(`${camData}`).once('value', (snap) => {
                 let embed = snap.val().URL;
-                document.getElementById("sunset-cam").setAttribute('src', embed + '?autoplay=1&mute=1');
-                document.getElementById("sunset-cam").setAttribute('width', window.innerWidth);
-                document.getElementById("sunset-cam").setAttribute('height', window.innerHeight);
+                let id = embed.split('/embed/')[1];
+                console.log(id);
+                player.loadVideoById(id);
             })
             // time until next cam (when sun sets at current one)
             let currentSunsetCountdown = dayjs(sunsetTimes[camIndex]).diff(dayjs());
             let currentSunsetCountdownMins = currentSunsetCountdown / 60000;
             console.log("sun setting in ", currentSunsetCountdownMins, "minutes");
             let nextCam = camIndex + 1;
+            setTimeout(() => { checkState(state) }, 5000);
             // set timer to move to next cam at sunset of current cam
             setTimeout(() => { console.log('next cam'); showCam(nextCam); }, currentSunsetCountdown);
         }
 
         // call once to get ordered arrays of sunsets
         orderSunset();
-        setTimeout(showSunset, 1000);
+        setTimeout(showSunset, 2000);
     </script>
-    <iframe id="sunset-cam" frameborder="0" allowfullscreen></iframe>
 </body>
 
 </html>
