--- a/public/index.html
+++ b/public/index.html
@@ -47,14 +47,31 @@
         let firstScriptTag = document.getElementsByTagName('script')[0];
         firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
         let state = -1;
-        let player;
-        let startCamIndex;
+        let startCamIndex = 0;
+        let nextSunset;
+        let timeout;
+
+        soonestSunset = () => {
+            startCamIndex = 0;
+            // find soonest sunset
+            sunsetTimes.forEach((sunsetTime) => {
+                let timeDiff = dayjs(sunsetTime).diff(dayjs());
+                // find soonest positive time difference
+                // API error returns negative time of 1st Jan 1970 - discount this by accepting > -1000000000000 time difference
+                if (timeDiff < 0 && timeDiff > -1000000000000) {
+                    startCamIndex = sunsetTimes.indexOf(sunsetTime);
+                }
+            });
+            // start the cams at first non - negative time difference
+            console.log('soonest sunset found');
+            return startCamIndex;
+        }
 
         onYouTubeIframeAPIReady = () => {
             player = new YT.Player('sunset-cam', {
                 height: '390',
                 width: '640',
-                videoId: 'C1nn5sYyVkQ',
+                videoId: '',
                 playerVars: {
                     'playsinline': 1,
                     'autoplay': 1,
@@ -67,29 +84,60 @@
             });
         }
 
-
         // 4. The API will call this function when the video player is ready.
         onPlayerReady = (event) => {
-            event.target.playVideo();
-            setTimeout(() => { checkState(state) }, 5000);
+            console.log('soonest sunset', nextSunset);
+            // after 5 seconds, check to see if video is working
+            setTimeout(() => { checkState() }, 5000);
         };
 
-        checkState = (state) => {
-            console.log(state, 'state');
+        // checks if video is playing
+        checkState = (event) => {
+            console.log('checking video...');
             if (state == 1) {
-                console.log('video works');
+                console.log('video working');
+                // do nothing
             }
             else {
                 console.log('video not working, next');
-                startCamIndex += 1;
-                console.log(startCamIndex);
-                showCam(startCamIndex);
+                // skip to next video
+                console.log('soonest sunset', nextSunset);
+                clearTimeout(timeout);
+                nextSunset += 1;
+                playVideo();
             }
-        };
+        }
 
+        playVideo = () => {
+            console.log('playVideo');
+            // check video is playing
+            setTimeout(()=> {checkState();}, 5000);
+            firebase.database().ref(`${nextSunset}`).once('value', (snap) => {
+                let embed = snap.val().URL;
+                id = embed.split('/embed/')[1];
+                console.log(id);
+                player.loadVideoById({ 'videoId': id });
+            })
+            // time until next cam (when sun sets at current one)
+            let currentSunsetCountdown = dayjs(sunsetTimes[nextSunset]).diff(dayjs());
+            let currentSunsetCountdownMins = currentSunsetCountdown / 60000;
+            console.log("sun setting in ", currentSunsetCountdownMins, "minutes");
+            timeout = setTimeout(() => {
+                nextSunset += 1;
+                playVideo();
+            }, currentSunsetCountdown);
+        }
+
+        // updates state of video globally - playing or not playing
         onPlayerStateChange = (event) => {
-            state = event.data;
-        };
+            if (event.data == 1) {
+                state = 1;
+            }
+            else {
+                state = -1;
+            }
+            console.log('state', state);
+        }
 
         // make an ordered array of sunset times and the index number their webcam
         orderSunset = () => {
@@ -107,49 +155,14 @@
                     sunsetIndexs.push(data.key);
                 })
             })
+            console.log('sunsets in order');
         };
 
-        showSunset = () => {
-            startCamIndex = 0;
-            // find soonest sunset
-            sunsetTimes.forEach((sunsetTime) => {
-                let timeDiff = dayjs(sunsetTime).diff(dayjs());
-                // find soonest positive time difference
-                // API error returns negative time of 1st Jan 1970 - discount this by accepting > -1000000000000 time difference
-                if (timeDiff < 0 && timeDiff > -1000000000000) {
-                    startCamIndex = sunsetTimes.indexOf(sunsetTime);
-                }
-            });
-            // start the cams at first non - negative time difference
-            startCamIndex += 1;
-            // show first cam
-            showCam(startCamIndex);
-        }
-
-        showCam = (camIndex) => {
-            // TO DO == CHECK IF VIDEO IS PLAYING / VALID OTHERWISE SKIP
-            let camData = sunsetIndexs[camIndex];
-            console.log(sunsetIndexs[camIndex]);
-            // show cam
-            firebase.database().ref(`${camData}`).once('value', (snap) => {
-                let embed = snap.val().URL;
-                let id = embed.split('/embed/')[1];
-                console.log(id);
-                player.loadVideoById(id);
-            })
-            // time until next cam (when sun sets at current one)
-            let currentSunsetCountdown = dayjs(sunsetTimes[camIndex]).diff(dayjs());
-            let currentSunsetCountdownMins = currentSunsetCountdown / 60000;
-            console.log("sun setting in ", currentSunsetCountdownMins, "minutes");
-            let nextCam = camIndex + 1;
-            setTimeout(() => { checkState(state) }, 5000);
-            // set timer to move to next cam at sunset of current cam
-            setTimeout(() => { console.log('next cam'); showCam(nextCam); }, currentSunsetCountdown);
-        }
-
-        // call once to get ordered arrays of sunsets
         orderSunset();
-        setTimeout(showSunset, 2000);
+        setTimeout(() => {
+            nextSunset = soonestSunset();
+        }, 1000);
+
     </script>
 </body>
 
